examples/failing/MutRec2.purs
module Main where

x = x
